refactoring pages of albums, posts and to dos

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,13 +1,14 @@
 <header>
-  <ul class="navbar">
+  <h1 class="header__title"><a href="/">Angular App</a></h1>
+  <ul class="header__navbar">
     <li>
-      <a routerLink="posts" [routerLinkActive]="['active']">POSTAGENS</a>
+      <a routerLink="posts" [routerLinkActive]="['active']">Posts</a>
     </li>
     <li>
-      <a routerLink="albums" [routerLinkActive]="['active']">ALBUNS</a>
+      <a routerLink="albums" [routerLinkActive]="['active']">Albuns</a>
     </li>
     <li>
-      <a routerLink="to-dos" [routerLinkActive]="['active']">TO-DOs</a>
+      <a routerLink="to-dos" [routerLinkActive]="['active']">To Do List</a>
     </li>
   </ul>
 </header>
