--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,10 +1,29 @@
 header {
   background-color: var(--primary);
-  padding: 10px;
   color: white;
 
-  nav {
-    flex-wrap: nowrap;
+  .header__title {
+    font-size: 36px;
+    padding: 40px 20px;
+  }
+
+  .header__navbar {
+    width: 100%;
+    height: 60px;
+    text-align: center;
+    background-color: #f08d79;
+    padding: 20px 0;
+  }
+
+  .header__navbar li {
+    border: 1px solid #f08d79;
+    width: 30px;
+    font-size: 18px;
+    display: inline;
+    margin-right: 30px;
+    padding: 5px 10px;
+    width: 100px;
+    height: 10px;
   }
 
   a {
@@ -12,19 +31,12 @@ header {
     text-decoration: none;
   }
 
-  .navbar {
-    text-align: center;
+  .header__navbar li:hover {
+    border: 1px solid #fff;
+    border-radius: 4px;
   }
+}
 
-  .navbar li {
-    display: inline;
-    padding: 5px 10px;
-    width: 100px;
-    height: 10px;
-  }
-
-  .active {
-    font-weight: bold;
-    text-decoration: underline;
-  }
+.active {
+  font-weight: bold;
 }
