--- a/src/app/pages/posts/posts.component.html
+++ b/src/app/pages/posts/posts.component.html
@@ -1,3 +1,5 @@
-<ng-container *ngFor="let post of posts">
-  <app-card [card]="post"></app-card>
-</ng-container>
+<div class="grid-container">
+  <ng-container *ngFor="let post of posts">
+    <app-card [card]="post"></app-card>
+  </ng-container>
+</div>
