--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,11 +6,12 @@ body {
 }
 body {
   margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: "Roboto", "Helvetica Neue", sans-serif;
+  background-color: lavenderblush;
 }
 
 :root {
-  --primary: #369c38;
+  --primary: #f2a899;
   --secondary: #132a13;
   --padding: 15px;
   --cinza: #405040;
@@ -27,18 +28,8 @@ a {
   color: inherit;
 }
 
-* {
-  font-family: "Roboto", sans-serif;
-}
-
 .container {
   max-width: 400px;
   padding: 30px;
   margin: 0 auto;
-}
-
-.mat-card {
-  background-color: #fff;
-  margin-bottom: 10px;
-  color: #000;
 }
