--- a/src/app/pages/posts/posts.component.html
+++ b/src/app/pages/posts/posts.component.html
@@ -1,5 +1,15 @@
-<div class="grid-container">
-  <ng-container *ngFor="let post of posts">
-    <app-card [card]="post"></app-card>
-  </ng-container>
-</div>
+<section class="posts">
+  <div class="grid-container">
+    <app-breadcrumb
+      class="posts__breadcrumb"
+      [model]="breadcrumb"
+    ></app-breadcrumb>
+    <div class="posts__add-post">
+      <a routerLink="add-post">Adicionar Novo Post</a>
+    </div>
+
+    <ng-container *ngFor="let post of posts">
+      <app-card [card]="post"></app-card>
+    </ng-container>
+  </div>
+</section>
