--- a/src/app/pages/albums/albums.component.scss
+++ b/src/app/pages/albums/albums.component.scss
@@ -1,6 +1,6 @@
 .grid-container {
   display: grid;
-  grid-template: 'breadcrumb breadcrumb breadcrumb breadcrumb';
+  grid-template: "breadcrumb breadcrumb breadcrumb breadcrumb";
   padding: 10px;
   grid-gap: 30px;
 }
@@ -27,4 +27,10 @@
   width: 100%;
   height: 40vh;
   object-fit: cover;
+}
+
+@media (max-width: 800px) {
+  .grid-container {
+    grid-template: "breadcrumb";
+  }
 }
