--- a/src/app/pages/posts/posts.component.scss
+++ b/src/app/pages/posts/posts.component.scss
@@ -16,3 +16,19 @@
   grid-column-start: 3;
   grid-column-end: 4;
 }
+
+@media (max-width: 800px) {
+  .grid-container {
+    grid-template-columns: 1fr;
+  }
+
+  .posts__breadcrumb {
+    grid-column-start: 1;
+    grid-column-end: 1;
+  }
+
+  .posts__add-post {
+    grid-column-start: 1;
+    grid-column-end: 1;
+  }
+}
